--- a/packages/components/Dialog/example/Example.html
+++ b/packages/components/Dialog/example/Example.html
@@ -90,7 +90,7 @@
     methods: {
       refreshPromise() {
         this.set({
-          promise: new Promise(resolve => setTimeout(() => resolve(), 2000)),
+          promise: new Promise((resolve) => setTimeout(() => resolve(), 2000)),
         });
       },
       openDialog(dialog, delay) {
