--- a/packages/components/Range/example/Example.html
+++ b/packages/components/Range/example/Example.html
@@ -62,7 +62,7 @@
     },
     data() {
       return {
-        rangeValidation: value => value >= 20 && value <= 80,
+        rangeValidation: (value) => value >= 20 && value <= 80,
       };
     },
   };
