--- a/packages/components/Radio/Radio.html
+++ b/packages/components/Radio/Radio.html
@@ -14,7 +14,7 @@
     data() {
       return {
         checked: false,
-        name: name || 'radio'
+        name: name || 'radio',
       };
     },
     methods: {
