--- a/packages/pos/simulator/view/pos/Wrapper.html
+++ b/packages/pos/simulator/view/pos/Wrapper.html
@@ -24,8 +24,7 @@
    * We check for `edge` because it fakes one.
    */
   const ENGINE =
-    'WebkitAppearance' in document.documentElement.style &&
-    !/edge/i.test(navigator.userAgent)
+    'WebkitAppearance' in document.documentElement.style && !/edge/i.test(navigator.userAgent)
       ? 'webkit'
       : 'other';
 
