--- a/packages/pos/simulator/view/pos/panels/Orgs.html
+++ b/packages/pos/simulator/view/pos/panels/Orgs.html
@@ -38,7 +38,7 @@
     },
     methods: {
       setOrg(org) {
-        Registry.persistent.set(draft => {
+        Registry.persistent.set((draft) => {
           draft.$System.Organizations.current = System().Organizations[org];
         });
       },
